typescript/checker/tests/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorWithAnyOtherType.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            83,
        ),
        hi: BytePos(
            86,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorWithAnyOtherType.ts:6:5
  |
6 | var obj: () => {}
  |     ^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            176,
        ),
        hi: BytePos(
            177,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorWithAnyOtherType.ts:10:12
   |
10 |     return a;
   |            ^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            321,
        ),
        hi: BytePos(
            322,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorWithAnyOtherType.ts:22:16
   |
22 | var objA = new A();
   |                ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            454,
        ),
        hi: BytePos(
            455,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorWithAnyOtherType.ts:28:25
   |
28 | var ResultIsBoolean4 = !M;
   |                         ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            561,
        ),
        hi: BytePos(
            570,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorWithAnyOtherType.ts:33:25
   |
33 | var ResultIsBoolean7 = !undefined;
   |                         ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            751,
        ),
        hi: BytePos(
            755,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorWithAnyOtherType.ts:40:26
   |
40 | var ResultIsBoolean12 = !objA.a;
   |                          ^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            784,
        ),
        hi: BytePos(
            785,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorWithAnyOtherType.ts:41:26
   |
41 | var ResultIsBoolean13 = !M.n;
   |                          ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            847,
        ),
        hi: BytePos(
            851,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorWithAnyOtherType.ts:43:27
   |
43 | var ResultIsBoolean15 = !A.foo();
   |                           ^^^^

